# BitNet-Oxidized

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cursor/rules/: english-only-comments-docs.mdc  rust-public-api-docs.mdc  rust-standards.mdc  rust-testing.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: e2e_benchmark.rs  kernel_comparison.rs  kernels.rs
docs/: TODO.md  coverage_analysis.md  deployment_guide.md  model_card.md  termux_and_phones.md
examples/: advanced_generation.rs  basic_inference.rs  benchmark.rs  debug_chat.rs  profile_inference.rs  quantize_model.rs  validate_model.rs
k8s/: deployment.yaml  hpa.yaml
models/: README.md
models/Llama3-8B-1.58-100B-tokens/: README.md  config.json  generation_config.json
reference/microsoft_bitnet/: README.md
scripts/: convert_hf_to_gguf_stdlib.py  convert_huggingface_to_gguf.py  download_and_convert.py  download_hf_model.py  quantize_model.py  setup-git-hooks.sh  test_gguf_read.py
src/: errors.rs  lib.rs  main.rs
src/debugging/: layer_trace.rs  mod.rs
src/inference/: cache.rs  constraints.rs  dynamic_batch.rs  engine.rs  generator.rs  logit_processors.rs  mod.rs  pipeline.rs  prefix_cache.rs  sampling.rs  speculative.rs  streaming.rs  structured.rs
src/kernels/: cpu.rs  flash_attention.rs  hardware_specific.rs  mod.rs  simd.rs  ternary.rs
src/model/: bitnet.rs  config.rs  converter.rs  demo.rs  gguf.rs  mod.rs  moe.rs  registry.rs
src/monitoring/: mod.rs  telemetry.rs
static/: index.html
tests/: integration_test.rs  reference_comparison.rs
(+18 files in other folders)
