[package]
name = "bitnet-oxidized"
version = "0.1.0"
edition = "2021"
description = "High-performance 1-bit LLM inference framework in pure Rust"
license = "MIT"
repository = "https://github.com/your-org/bitnet-oxidized"
keywords = ["llm", "inference", "quantization", "bitnet", "ternary"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = "0.16"
rayon = "1.10"
memmap2 = "0.9"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kernels"
harness = false

[[bench]]
name = "e2e_benchmark"
harness = false
